removed user_accounts table
